# Utils/authenticateToken.js
@@ -1,0 +1,20 @@
+import jwt from 'jsonwebtoken';
+
+function authenticateToken(req, res, next) {
+    const authHeader = req.headers['authorization'];
+    const token = authHeader && authHeader.split(' ')[1];
+    
+    if (token == null) {
+        return res.sendStatus(401);
+    }
+    
+    jwt.verify(token, process.env.ACCESS_TOKEN_SECRET, (err, user) => {
+        if (err) {
+            return res.sendStatus(401);
+        }
+        req.user = user;
+        next();
+    });
+}
+
+export{ authenticateToken };
